部分全部实现 实现方式2中 代码带优化

--- a/IECapt/IECapt.csproj
+++ b/IECapt/IECapt.csproj
@@ -57,6 +57,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -78,10 +81,15 @@
     <Content Include="Demo.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Js\common.js" />
+    <Content Include="Js\jquery.min.js" />
     <Content Include="Lib\IECapt.exe" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Helper\SnapHelper.cs" />
+    <Compile Include="Helper\Models\ImageType.cs" />
+    <Compile Include="Helper\ImageHelper.cs" />
+    <Content Include="Helper\WebSnapshotsHelper.cs" />
     <Compile Include="Demo.aspx.cs">
       <DependentUpon>Demo.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -93,14 +101,14 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helper\IECaptHelper.cs" />
-    <Compile Include="Helper\IECaptStatus.cs" />
-    <Compile Include="Helper\IECaptParameter.cs" />
-    <Compile Include="Helper\ReturnResult.cs" />
+    <Compile Include="Helper\Models\IECaptStatus.cs" />
+    <Compile Include="Helper\Models\IECaptParameter.cs" />
+    <Compile Include="Helper\Models\ReturnResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Code\" />
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
